<resources>
    <string name="app_name">Julisha</string>
    <string name="modifier_profil">Modifier mon profil</string>
    <string name="telephone">Téléphone</string>
    <string name="Adress">Adresse</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="Connexion">Connexion</string>
    <string name="Facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="connexion_avec_Facebook">connexion avec Facebook</string>
    <string name="Connexion_google">connexion avec google</string>
    <string name="creer_compte">Connexion</string>
    <string name="creer_compte1">Créer un compte</string>
    <string name="Passer">creer un compte > </string>
    <string name="product_title">Product title</string>
    <string name="user_number">06 54 25 15 25</string>
    <string name="user_adress">84 Rue du Gros chapeau. 78000 Versailles</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="para_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="para_long">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_magazine">MagazineActivity</string>
    <string name="title_activity_mag_event_suc">MagEventSucActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txtstartup">Les startups qui donnent des voix et qui animent sur les réseaux sociaux en République Démocratique du Congo sont multiples aujourd’hui, parmi elles nous vous présentons deux nouvelles startups qui animent nos fils d’actualité à travers des sites web et des pages sur des grands réseaux internet. </string>
</resources>
