<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.julisha.afrisuser.julisha.CreateProfil1Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenBackGround"
            android:theme="@style/Base.Theme.AppCompat">

            <TextView
                android:id="@+id/user_profil_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mon_profil"
                android:textSize="25dp" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBarLayout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearlayout_profil_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_profil"
                        android:layout_width="@dimen/profil_width_and_height"
                        android:layout_height="@dimen/profil_width_and_height"
                        android:layout_gravity="top"
                        android:layout_marginStart="@dimen/profil_picture_margin_start"
                        android:layout_marginTop="@dimen/profil_picture_margin_start"
                        android:elevation="1dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/photos"
                        app:sriv_border_color="#00bc41"
                        app:sriv_border_width="2dp"
                        app:sriv_oval="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginLeft="@dimen/profil_picture_margin_start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_ProfilUser_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="Trey Ratcliff"
                            android:textColor="@color/DarkGray"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/ic_edit" />

                            <TextView
                                android:id="@+id/txt_modifier_profil"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="10sp"
                                android:paddingTop="5dp"
                                android:text="@string/modifier_profil"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_photo"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_profil_tel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/telephone"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_proofil_adress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/Adress"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/phone_adress_margin_left_and_right"
                            android:layout_weight="1"
                            android:text="@string/user_number"
                            android:textColor="@color/DarkGray" />

                        <TextView
                            android:id="@+id/txt_user_adress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/profil_picture_margin_start"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/user_adress"
                            android:textColor="@color/DarkGray"
                            android:textSize="10sp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="27dp"
                            android:layout_height="32dp"
                            app:srcCompat="@drawable/ic_edit" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_photo"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_profil_tel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="Type  de Profil"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_proofil_adress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/Adress"
                            android:textColor="@color/default_circle_indicator_fill_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/phone_adress_margin_left_and_right"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Investisseur"
                            android:textColor="@color/DarkGray" />

                        <TextView
                            android:id="@+id/txt_user_adress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/profil_picture_margin_start"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/user_adress"
                            android:textColor="@color/default_circle_indicator_fill_color"
                            android:textSize="10sp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="27dp"
                            android:layout_height="32dp"
                            app:srcCompat="@drawable/ic_edit" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_photo"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_connexion_with"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/Connexion"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_rdbutton_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/google"
                            android:textColor="@color/DarkGray" />

                        <ToggleButton
                            android:id="@+id/tgglebtn_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.11"
                            android:text="ToggleButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="48dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_rdbutton_facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Facebook"
                            android:textColor="@color/DarkGray" />

                        <ToggleButton
                            android:id="@+id/tgglebtn_fcbk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.11"
                            android:text="ToggleButton" />

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
